# Sandbox

./: .gitignore  CMakeLists.txt  README.md
cmake/: platform_defines.hpp.in
code/: main.cpp
code/shared/: logger.hpp
